Bug 201515 - "Create -> Implicit Plot" freezes application
Summary: "Create -> Implicit Plot" freezes application
Status: RESOLVED FIXED
Alias: None
Product: kmplot
Classification: Applications
Component: general (show other bugs)
Version: 1.3.0
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Klaus-Dieter M
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-07-26 06:45 UTC by André Neves
Modified: 2019-06-10 05:08 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description André Neves 2009-07-26 06:45:26 UTC
Version:            (using KDE 4.2.4)
OS:                Linux
Installed from:    Debian testing/unstable Packages

The default plot may freeze the app when you choose to create a new Implicit Plot.

If the Coordinate System is set to a large area - try ((-500,-500),(500,500)) -, creating a new Implicit Plot will hang the application while it fruitlessly attempts to draw y∙sinx + x∙cosy = 1 on the whole area, to no avail.
Comment 1 Andrew Crouthamel 2018-11-02 23:05:22 UTC
Dear Bug Submitter,

This bug has been stagnant for a long time. Could you help us out and re-test if the bug is valid in the latest version? I am setting the status to NEEDSINFO pending your response, please change the Status back to REPORTED when you respond.

Thank you for helping us make KDE software even better for everyone!
Comment 2 André Neves 2018-11-03 00:52:48 UTC
Hi!

Unfortunately I cannot do this. I don't even use Linux anymore.

I wish you the best.
Comment 3 Andrew Crouthamel 2018-11-05 03:00:02 UTC
Thanks for the update!
Comment 4 Alexander Kernozhitsky 2019-05-07 20:39:14 UTC
The bug is still valid :)

I think it's better to use another function as a default, or use different default functions for different scale.
Comment 5 Yuri Chornoivan 2019-06-10 05:08:32 UTC
Git commit cccef665f85f083b157195e3c69570fe9a88b33e by Yuri Chornoivan.
Committed on 10/06/2019 at 05:08.
Pushed by yurchor into branch 'Applications/19.04'.

Use elliptic curve as a default implicit curve

The current default implicit plot 'y∙sinx + x∙cosy = 1' scales badly on the big area. This can be mitigated using some simpler but famous plot.
Differential Revision: https://phabricator.kde.org/D21190

M  +1    -1    kmplot/functioneditor.cpp

https://commits.kde.org/kmplot/cccef665f85f083b157195e3c69570fe9a88b33e