Use elliptic curve as a default implicit curve

The current default implicit plot 'y∙sinx + x∙cosy = 1' scales badly on the big area. This can be mitigated using some simpler but famous plot.

BUG: 201515
Differential Revision: https://phabricator.kde.org/D21190